# ibm-bob-hackathon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CONSULTANT_TROUBLESHOOTING.md  BEEAI_MIGRATION_COMPLETE.md  BEEAI_MIGRATION_PLAN.md  IMPLEMENTATION_REVIEW.md  README.md  SHIPPING_ROUTES_IMPROVEMENTS.md  TESTING_GUIDE.md  TESTING_RESULTS.md  bob_task_1.md  bob_task_3.md  bob_task_4.md  bob_task_7.md  docker-compose.yml  package-lock.json  package.json
apps/backend/: .env.example  .flake8  .gitignore  BEEAI_AUDITOR_STATUS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS.md  pyproject.toml  pytest.ini  requirements.txt  test_beeai_simple.py  test_orchestrator_workflow.py  test_watsonx.py  test_watsonx_simple.py
apps/backend/examples/: beeai_auditor_example.py  beeai_weather_example.py
apps/backend/src/: __init__.py  main.py
apps/backend/src/agents/: __init__.py  base_agent.py
apps/backend/src/agents/auditor/: BEEAI_AUDITOR.md  README.md  __init__.py  auditor_agent.py  beeai_auditor.py  config.py  emissions_calculator.py  fleet_prioritizer.py  route_optimizer.py
apps/backend/src/agents/monitor/: BEEAI_WEATHER_AGENT.md  README.md  __init__.py  config.py  monitor_agent.py  vendors.py  weather_monitor.py
apps/backend/src/agents/orchestrator/: README.md  WORKFLOW_README.md  __init__.py  config.py  message_bus.py  orchestrator_agent.py
apps/backend/src/api/: __init__.py  agents.py  chat.py  emissions.py  orchestrator.py  vendors.py  weather.py
apps/backend/src/config/: __init__.py  settings.py
apps/backend/src/models/: __init__.py  schemas.py
apps/backend/src/services/: __init__.py  watsonx_service.py  weather_service.py
apps/backend/src/utils/: __init__.py  logger.py
apps/backend/tests/: __init__.py
apps/frontend/: .env.example  .eslintrc.json  .prettierrc  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/components/: CommandCenter.tsx
apps/frontend/src/data/: shipping-routes.ts  world-ports.ts
bob task histories/: bob_task_10.md  bob_task_11.md  bob_task_12.md  bob_task_2.md  bob_task_5.md  bob_task_6.md  bob_task_8.md  bob_task_9.md  bob_task_may-2-2026_1-09-12-pm.md  bob_task_may-2-2026_1-12-56-pm.md  bob_task_may-2-2026_12-10-57-pm.md  bob_task_may-2-2026_12-15-49-pm.md  bob_task_may-2-2026_12-23-54-pm.md  bob_task_may-2-2026_12-33-03-pm.md  bob_task_may-2-2026_12-37-25-pm.md  bob_task_may-2-2026_12-43-50-pm.md  bob_task_may-2-2026_12-51-19-pm.md  bob_task_may-2-2026_12-53-39-pm.md  bob_task_may-2-2026_12-57-17-pm.md  bob_task_may-3-2026_1-32-35-pm.md  bob_task_may-3-2026_1-34-59-pm.md  bob_task_may-3-2026_1-35-05-pm.md  bob_task_may-3-2026_1-53-30-pm.md  bob_task_may-3-2026_11-27-33-am.md  bob_task_may-3-2026_12-37-25-pm.md  bob_task_may-3-2026_12-42-24-pm.md  bob_task_may-3-2026_12-48-11-pm.md  bob_task_may-3-2026_2-02-23-pm.md  bob_task_may-3-2026_2-39-45-am.md  bob_task_may-3-2026_4-32-28-pm.md  bob_task_may-3-2026_8-36-25-am.md
docs/: ARCHITECTURE.md  QUICK_START.md
scripts/: dev.ps1  setup.ps1  test.ps1
(+9 files in other folders)
